--- a/category.html
+++ b/category.html
@@ -18,7 +18,7 @@
     <div class="page">
         <div class="banner hc vc">
             <div class="banner-div">
-                Badminton
+                <div class="title">Badminton</div>
             </div>
         </div>
         <div class="wall hc">
