--- a/games.html
+++ b/games.html
@@ -20,7 +20,7 @@
     <div class="page">
         <div class="banner hc vc">
             <div class="banner-div">
-                <div class="game-title">Singles Men</div>
+                <div class="title">Singles Men</div>
                 <div class="tabs">
                     <div class="tab player active">Players</div>
                     <div class="tab schedule">Schedules</div>
