--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <title>Document</title>
 </head>
 <body>
-    <a href="category.html">Click Me</a>
+    <a href="category.html">Category</a>
+    <a href="games.html">Games</a>
+    <a href="page.html">Page</a>
 </body>
 </html>
