--- a/page.html
+++ b/page.html
@@ -62,6 +62,27 @@
                 <div class="card players single">
                     <div class="name">Lorem Ipsum</div>
                 </div>
+                <div class="card players single">
+                    <div class="name">Lorem Ipsum</div>
+                </div>
+                <div class="card players single">
+                    <div class="name">Lorem Ipsum</div>
+                </div>
+                <div class="card players single">
+                    <div class="name">Lorem Ipsum</div>
+                </div>
+                <div class="card players single">
+                    <div class="name">Lorem Ipsum</div>
+                </div>
+                <div class="card players single">
+                    <div class="name">Lorem Ipsum</div>
+                </div>
+                <div class="card players single">
+                    <div class="name">Lorem Ipsum</div>
+                </div>
+                <div class="card players single">
+                    <div class="name">Lorem Ipsum</div>
+                </div>
 
                 <div class="card text span2">Doubles</div>
 
@@ -82,21 +103,14 @@
 
                 <div class="card section span2">Category Cards</div>
                 
-                <div class="card category men single">
-                    Mens Single
-                </div>
-                <div class="card category women single">
-                    Womens Single
-                </div>
-                <div class="card category men double">
-                    Mens Double
-                </div>
-                <div class="card category women double">
-                    Womens Double
-                </div>
-                <div class="card category mix double">
-                    Mix Doubles
-                </div>
+                <div class="card category single men">Mens Single</div>
+                <div class="card category single women highlight">Womens Single</div>
+                <div class="card category double men">Mens Double</div>
+                <div class="card category double women">Womens Double</div>
+                <div class="card category double mix">Mix Doubles</div>
+
+                <div class="card section span2">Event Cards</div>
+
                 <!-- Add Varaious Cards here -->
             </div>
         </div>
