--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <title>Document</title>
 </head>
 <body>
-    <a href="category.html">Category</a>
-    <a href="games.html">Games</a>
     <a href="page.html">Page</a>
+    <a href="badminton/category.html">Badminton Category</a>
+    <a href="badminton/event.html">Badminton Events</a>
 </body>
 </html>
