URL wiring done

--- a/badminton/event.html
+++ b/badminton/event.html
@@ -22,7 +22,7 @@
         <div class="banner">
             <div class="content">
                 <!-- To align title add "center" -->
-                <div class="title center">IUCAA Badminton Tournament 2024</div>
+                <div class="title center">Title</div>
 
                 <!-- If tabs not wanted, add "hide" -->
                 <!-- For extra tabs just add extra divs, CSS and JS will handle the rest -->
@@ -49,4 +49,9 @@
 
     </div>
 </body>
+
+<script>
+    window.onload = function() {FillCards();};
+</script>
+
 </html>
