--- a/page.html
+++ b/page.html
@@ -44,6 +44,23 @@
             <div class="content">
                 <!-- Add Varaious Cards here -->
 
+                <!-- Section Card -->
+                "<div class="card section span2">Section</div>
+
+                <!-- Text Card -->
+                <div class="card text span2">A short text displayed here</div>
+
+                <!-- Category Card -->
+                <div class="card game-category single men">
+                    <div class="text">
+                        <div class="name">Category Title</div>
+                        <div ><span class="live hide">LIVE</span></div>
+                    </div>
+                    <div class="icon material-symbols-outlined">
+                        <!-- Icon filled by CSS -->
+                    </div>
+                </div>
+
                 <!-- New Card -->
                 <div class="card game-event single" onclick="">
                    <div class="schedule">
@@ -76,10 +93,7 @@
 
                  
 
-                
 
-
-                <div class="card section span2">Javascript</div>
                 <!-- Add Varaious Cards here -->
             </div>
         </div>
