--- a/badminton/event.html
+++ b/badminton/event.html
@@ -14,8 +14,8 @@
     <link rel="stylesheet" href="../theme.css"> <!-- Put theme before style -->
     <link rel="stylesheet" href="../style.css"> <!-- So that style has access to theme variables-->
     
-    <script src="../script.js" defer></script>
-    <script src="cards.js" defer></script>
+    <script src="../script-ani.js" defer></script>
+    <script src="cards-ani.js" defer></script>
 </head>
 <body class="theme-light"> <!-- See "theme.js" for possible themes-->
     <div class="page">
@@ -34,9 +34,9 @@
                 </div>
                 
 
-                <div class="footer">
+                <!-- <div class="footer">
                     <div>January 2024</div>
-                </div>
+                </div> -->
             </div>
         </div>
 
