--- a/badminton/category.html
+++ b/badminton/category.html
@@ -14,8 +14,17 @@
     <link rel="stylesheet" href="../theme.css">
     <link rel="stylesheet" href="../style.css">
     
-    <script src="../script.js" defer></script>
+    <script src="data.js" defer></script>
+    <script src="utility.js" defer></script>
+    <script src="inject.js" defer></script>
     <script src="cards.js" defer></script>
+    <script src="../script.js" defer></script>
+
+    <!-- <style type="text/css">
+        .borderImage {
+          -webkit-tap-highlight-color: transparent;
+        }
+    </style> -->
 </head>
 <body class="theme-light">
     <div class="page">
