--- a/badminton/event.html
+++ b/badminton/event.html
@@ -14,8 +14,11 @@
     <link rel="stylesheet" href="../theme.css"> <!-- Put theme before style -->
     <link rel="stylesheet" href="../style.css"> <!-- So that style has access to theme variables-->
     
-    <script src="../script-ani.js" defer></script>
-    <script src="cards-ani.js" defer></script>
+    <script src="data.js" defer></script>
+    <script src="utility.js" defer></script>
+    <script src="inject.js" defer></script>
+    <script src="cards.js" defer></script>
+    <script src="../script.js" defer></script>
 </head>
 <body class="theme-light"> <!-- See "theme.js" for possible themes-->
     <div class="page">
