--- a/page.html
+++ b/page.html
@@ -195,7 +195,7 @@
                             <div class="left">
                                 <div class="players">
                                     <div class="male">Anirban Kopty</div>
-                                    <div class="female">Anirban Kopty</div>
+                                    <div class="male">Anirban Kopty</div>
                                 </div>
                                 <div class="score">00</div>
                             </div>
