--- a/page.html
+++ b/page.html
@@ -65,12 +65,12 @@
                             <div class="top">
                                 <div class="round1">00</div>
                                 <div class="round2">00</div>
-                                <div class="round3">00</div>
+                                <div class="round3 extra-grey">00</div>
                             </div>
                             <div class="bottom">
                                 <div class="round1">00</div>
                                 <div class="round2">00</div>
-                                <div class="round3">00</div>
+                                <div class="round3 extra-grey">00</div>
                             </div>
                         </div>
 
@@ -101,12 +101,12 @@
                             <div class="top">
                                 <div class="round1">00</div>
                                 <div class="round2">00</div>
-                                <div class="round3">00</div>
+                                <div class="round3 extra-grey">00</div>
                             </div>
                             <div class="bottom">
                                 <div class="round1">00</div>
                                 <div class="round2">00</div>
-                                <div class="round3">00</div>
+                                <div class="round3 extra-grey">00</div>
                             </div>
                         </div>
 
