Single Page navigation

--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <title>Document</title>
 </head>
 <body>
-    <a href="page.html">Page</a>
+    <a href="base/page.html?key=value1">Page</a>
+    <a href="badminton_t/page.html?category=category">Badminton T</a>
     <a href="badminton/category.html">Badminton Category</a>
     <a href="badminton/event.html">Badminton Events</a>
 </body>
