--- a/badminton/category.html
+++ b/badminton/category.html
@@ -11,20 +11,15 @@
     <link href="https://fonts.googleapis.com/css2?family=Poppins&family=Anton&family=Fugaz+One&family=Lobster&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
     
-    <link rel="stylesheet" href="../theme.css">
-    <link rel="stylesheet" href="../style.css">
+    <link rel="stylesheet" href="../base/theme.css">
+    <link rel="stylesheet" href="../base/style.css">
     
     <script src="data.js" defer></script>
     <script src="utility.js" defer></script>
     <script src="inject.js" defer></script>
     <script src="cards.js" defer></script>
-    <script src="../script.js" defer></script>
+    <script src="../base/script.js" defer></script>
 
-    <!-- <style type="text/css">
-        .borderImage {
-          -webkit-tap-highlight-color: transparent;
-        }
-    </style> -->
 </head>
 <body class="theme-light">
     <div class="page">
