--- a/base/page.html
+++ b/base/page.html
@@ -15,8 +15,8 @@
     <link rel="stylesheet" href="style.css"> <!-- So that style has access to theme variables-->
     
     <script src="script.js" defer></script>
-    <script src="badminton/inject_new.js" defer></script>
-    <script src="badminton/cards_new.js" defer></script>
+    <script src="inject.js" defer></script>
+    <script src="cards.js" defer></script>
 </head>
 <body class="theme-light"> <!-- See "theme.js" for possible themes-->
     <div class="page">
