--- a/base/page.html
+++ b/base/page.html
@@ -15,8 +15,8 @@
     <link rel="stylesheet" href="style.css"> <!-- So that style has access to theme variables-->
     
     <script src="script.js" defer></script>
-    <script src="inject.js" defer></script>
-    <script src="cards.js" defer></script>
+    <!-- <script src="inject.js" defer></script> -->
+    <!-- <script src="cards.js" defer></script> -->
 </head>
 <body class="theme-light"> <!-- See "theme.js" for possible themes-->
     <div class="page">
@@ -62,7 +62,7 @@
                             <div class="female">Partha Pratim Deka</div>
                         </div>
 
-                        <div class="score">
+                        <div class="score hide">
                             <div class="top">
                                 <div class="round1">00</div>
                                 <div class="round2">00</div>
@@ -81,7 +81,7 @@
                         </div>
         
                     </div>
-                    <div class="result">
+                    <div class="result hide">
                             Game displayed result here.
                     </div>
                 </div>
