publishable code for now with updated data.js

--- a/badminton/category.html
+++ b/badminton/category.html
@@ -27,7 +27,7 @@
             <div class="content">
                 <div class="title center">Badminton</div>
                 <div class="footer">
-                    <div style="font-size: 1rem;">2024</div>
+                    <div>January 2024</div>
                 </div>
             </div>
         </div>
