Willing_team ideology and credits implemented

--- a/badminton/category.html
+++ b/badminton/category.html
@@ -18,7 +18,7 @@
     <script src="utility.js" defer></script>
     <script src="inject.js" defer></script>
     <script src="cards.js" defer></script>
-    <script src="../base/script.js" defer></script>
+    <script src="script.js" defer></script>
 
 </head>
 <body class="theme-light">
@@ -44,7 +44,11 @@
 </body>
 
 <script>
-    window.onload = function() {ShowCategory();};
+    window.onload = function() {
+        ShowCategory();
+        // AddCredits();
+        AddShortCredits();
+        };
 </script>
 
 </html>
