--- a/badminton/event.html
+++ b/badminton/event.html
@@ -56,6 +56,7 @@
 <script>
     window.onload = function() { 
     FillCards();
+    // AddCredits();
     category = GetURLParameter('category');         
     CalculatePoints(category);
 };
