css fixed result div for long messages

--- a/base/page.html
+++ b/base/page.html
@@ -104,13 +104,13 @@
 
                         <div class="score">
                             <div class="top">
-                                <div class="round1">00</div>
-                                <div class="round2">00</div>
+                                <div class="round1">21</div>
+                                <div class="round2">14</div>
                                 <div class="round3 extra-grey">00</div>
                             </div>
                             <div class="bottom">
-                                <div class="round1">00</div>
-                                <div class="round2">00</div>
+                                <div class="round1">21</div>
+                                <div class="round2">19</div>
                                 <div class="round3 extra-grey">00</div>
                             </div>
                         </div>
@@ -122,7 +122,7 @@
         
                     </div>
                     <div class="result">
-                            Game displayed result here.
+                            Game displayed result here. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Consectetur facere a iusto id nemo cum eius. Voluptas fugit beatae molestiae architecto, aliquid ratione nisi commodi quidem vel sint id, natus labore alias sequi libero ea consequatur cumque vitae reprehenderit? Eligendi asperiores tempore nisi quaerat totam ipsum sunt commodi soluta fugiat!
                     </div>
                 </div>
 
