--- a/base/page.html
+++ b/base/page.html
@@ -53,6 +53,8 @@
                 <div class="card section span2">New Event Cards</div>
 
                 <div class="card game-event">
+                    <div class="header">Men's Double - Final</div>
+
                     <div class="schedule">
                         <div class="match-no">Match 1</div>
                         <div class="date">05 Jan</div>
@@ -91,6 +93,8 @@
                 
 
                 <div class="card game-event highlight">
+                    <div class="header">Men's Double - Final</div>
+
                     <div class="schedule">
                         <div class="match-no">Match 1</div>
                         <div class="date">05 Jan</div>
@@ -128,6 +132,8 @@
 
 
                 <div class="card game-event">
+                    <div class="header">Men's Double - Final</div>
+
                     <div class="schedule">
                         <div class="match-no">Match 1</div>
                         <div class="date">05 Jan</div>
@@ -303,6 +309,17 @@
                     </div>
                 </a>
 
+
+
+                <div class="card game-category all all">
+                    <div class="text">
+                        <div class="name">Category Title</div>
+                        <div ><span class="live">LIVE</span></div>
+                    </div>
+                    <div class="icon material-symbols-outlined">
+                        <!-- Icon filled by CSS -->
+                    </div>
+                </div>
 
                 
 
