--- a/base/page.html
+++ b/base/page.html
@@ -45,10 +45,6 @@
             <div class="content">
                 <!-- Add Varaious Cards here -->
 
-
-
-
-
                 <!-- Event Card New -->
                 <div class="card section span2">New Event Cards</div>
 
@@ -126,7 +122,7 @@
         
                     </div>
                     <div class="result">
-                            Game displayed result here. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Consectetur facere a iusto id nemo cum eius. Voluptas fugit beatae molestiae architecto, aliquid ratione nisi commodi quidem vel sint id, natus labore alias sequi libero ea consequatur cumque vitae reprehenderit? Eligendi asperiores tempore nisi quaerat totam ipsum sunt commodi soluta fugiat!
+                            Game displayed result here. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Optio, adipisci! Ab nihil reiciendis iusto est atque quod, dolores aperiam architecto nostrum voluptatum praesentium nesciunt officiis eveniet consectetur! Sequi, assumenda officiis. Labore ea impedit nam soluta perferendis molestiae voluptate veniam, magnam sed expedita vitae accusamus doloremque, nemo dolores eligendi, deleniti distinctio!
                     </div>
                 </div>
 
