Final Commit for publish with data updated

--- a/badminton/event.html
+++ b/badminton/event.html
@@ -31,7 +31,7 @@
                 <!-- For extra tabs just add extra divs, CSS and JS will handle the rest -->
                 <div class="tabbar">
                     <div class="tab active">Players</div>
-                    <div class="tab">Schedule</div>
+                    <div class="tab">Events</div>
                     <div class="tab">Table</div>
                     <!-- <div class="tab">Tab 4</div> -->
                 </div>
@@ -56,7 +56,6 @@
 <script>
     window.onload = function() { 
     FillCards();
-    // AddCredits();
     category = GetURLParameter('category');         
     CalculatePoints(category);
 };
