--- a/base/design.html
+++ b/base/design.html
@@ -14,7 +14,7 @@
     <link rel="stylesheet" href="theme.css"> <!-- Put theme before style -->
     <link rel="stylesheet" href="style.css"> <!-- So that style has access to theme variables-->
     
-    <script src="script.js" defer></script>
+    <script src="../JS/script.js" defer></script>
     <!-- <script src="inject.js" defer></script> -->
     <!-- <script src="cards.js" defer></script> -->
 </head>
