All schedule to include date section headers now, `schedule` in event card font size lowered.

--- a/base/design.html
+++ b/base/design.html
@@ -319,7 +319,7 @@
 
                 
 
-                <!-- Event Card -->
+                <!-- Old Event Card -->
                 <div class="card section span2">Event Cards</div>
 
                 <div class="card game-event-s1 single">
